--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.138",
+    "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.6.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
