--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.13.0",
+    "@mui/x-date-pickers-pro": "^7.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.6.7",
     "dayjs": "^1.11.13",
